Inline-images: Fix image distortion

--- a/scss/_patterns_inline-images.scss
+++ b/scss/_patterns_inline-images.scss
@@ -26,9 +26,8 @@
       }
 
       * {
-        max-height: $sp-xxx-large;
+        max-height: map-get($icon-sizes, thumb--small);
         max-width: 7rem;
-        width: 100%;
 
         @media only screen and (min-width: $breakpoint-medium) {
           max-height: 5.5rem;
@@ -47,7 +46,7 @@
         width: 100%;
 
         @media (min-width: $breakpoint-medium) {
-          margin: $sp-xxx-large;
+          margin: map-get($icon-sizes, thumb--small);
           max-width: 11.25rem;
         }
       }
